syntax = "proto3";
option go_package = "github.com/hybrid-syntax/mt5-grpc/go/mt5grpc/internal/pb;pb";

enum TimeFrame {
  TIMEFRAME_UNSPECIFIED = 0;
  TIMEFRAME_M1 = 1;
  TIMEFRAME_M2 = 2;
  TIMEFRAME_M3 = 3;
  TIMEFRAME_M4 = 4;
  TIMEFRAME_M5 = 5;
  TIMEFRAME_M6 = 6;
  TIMEFRAME_M10 = 10;
  TIMEFRAME_M12 = 12;
  TIMEFRAME_M15 = 15;
  TIMEFRAME_M20 = 20;
  TIMEFRAME_M30 = 30;
  TIMEFRAME_H1 = 16385;
  TIMEFRAME_H2 = 16386;
  TIMEFRAME_H3 = 16387;
  TIMEFRAME_H4 = 16388;
  TIMEFRAME_H6 = 16390;
  TIMEFRAME_H8 = 16392;
  TIMEFRAME_H12 = 16396;
  TIMEFRAME_D1 = 16408;
  TIMEFRAME_W1 = 32769;
  TIMEFRAME_MN1 = 49153;
}


enum OrderTime{
  ORDER_TIME_GTC = 0 ; // Good till cancel order
  ORDER_TIME_DAY = 1 ; // Good till current trade day order
  ORDER_TIME_SPECIFIED = 2;  // Good till expired order
  ORDER_TIME_SPECIFIED_DAY = 3;  // The order will be effective till 23:59:59 of the specified day. If this time is outside a trading session, the order expires in the nearest trading time.
}

enum OrderTypeFilling{
  // ENUM_ORDER_TYPE_FILLING
  ORDER_FILLING_FOK = 0;  // Fill Or Kill order
  ORDER_FILLING_IOC = 1;  // Immediately Or Cancel
  ORDER_FILLING_RETURN = 2;  // Return remaining volume to book
  ORDER_FILLING_BOC = 3;  // Book Or Cancel order
}
enum TradeAction {
  // ENUM_TRADE_REQUEST_ACTIONS, Trade Operation Types
  TRADE_ACTION_UNSPECIFIED = 0;
  TRADE_ACTION_DEAL = 1;  // Place a trade order for an immediate execution with the specified parameters (market order)
  TRADE_ACTION_PENDING = 5;  // Place a trade order for the execution under specified conditions (pending order)
  TRADE_ACTION_SLTP = 6 ; // Modify Stop Loss and Take Profit values of an opened position
  TRADE_ACTION_MODIFY = 7;  // Modify the parameters of the order placed previously
  TRADE_ACTION_REMOVE = 8 ; // Delete the pending order placed previously
  TRADE_ACTION_CLOSE_BY = 10;  // Close a position by an opposite one
}


enum OrderType{
  // order types, ENUM_ORDER_TYPE
  ORDER_TYPE_BUY = 0;  // Market Buy order
  ORDER_TYPE_SELL = 1;  // Market Sell order
  ORDER_TYPE_BUY_LIMIT = 2;  // Buy Limit pending order
  ORDER_TYPE_SELL_LIMIT = 3;  // Sell Limit pending order
  ORDER_TYPE_BUY_STOP = 4;  // Buy Stop pending order
  ORDER_TYPE_SELL_STOP = 5;  // Sell Stop pending order
  ORDER_TYPE_BUY_STOP_LIMIT = 6;  // Upon reaching the order price, a pending Buy Limit order is placed at the StopLimit price
  ORDER_TYPE_SELL_STOP_LIMIT = 7;  // Upon reaching the order price, a pending Sell Limit order is placed at the StopLimit price
  ORDER_TYPE_CLOSE_BY = 8;  // Order to close a position by an opposite one
}

enum BookType{
  // ENUM_BOOK_TYPE
  BOOK_TYPE_UNSPECIFIED = 0;
  BOOK_TYPE_SELL = 1;
  BOOK_TYPE_BUY = 2;
  BOOK_TYPE_SELL_MARKET = 3;
  BOOK_TYPE_BUY_MARKET = 4;
}

enum TradeReturnCode {
  TRADE_RETCODE_UNSPECIFIED = 0;  // optional: default fallback

  TRADE_RETCODE_REQUOTE = 10004;
  TRADE_RETCODE_REJECT = 10006;
  TRADE_RETCODE_CANCEL = 10007;
  TRADE_RETCODE_PLACED = 10008;
  TRADE_RETCODE_DONE = 10009;
  TRADE_RETCODE_DONE_PARTIAL = 10010;
  TRADE_RETCODE_ERROR = 10011;
  TRADE_RETCODE_TIMEOUT = 10012;
  TRADE_RETCODE_INVALID = 10013;
  TRADE_RETCODE_INVALID_VOLUME = 10014;
  TRADE_RETCODE_INVALID_PRICE = 10015;
  TRADE_RETCODE_INVALID_STOPS = 10016;
  TRADE_RETCODE_TRADE_DISABLED = 10017;
  TRADE_RETCODE_MARKET_CLOSED = 10018;
  TRADE_RETCODE_NO_MONEY = 10019;
  TRADE_RETCODE_PRICE_CHANGED = 10020;
  TRADE_RETCODE_PRICE_OFF = 10021;
  TRADE_RETCODE_INVALID_EXPIRATION = 10022;
  TRADE_RETCODE_ORDER_CHANGED = 10023;
  TRADE_RETCODE_TOO_MANY_REQUESTS = 10024;
  TRADE_RETCODE_NO_CHANGES = 10025;
  TRADE_RETCODE_SERVER_DISABLES_AT = 10026;
  TRADE_RETCODE_CLIENT_DISABLES_AT = 10027;
  TRADE_RETCODE_LOCKED = 10028;
  TRADE_RETCODE_FROZEN = 10029;
  TRADE_RETCODE_INVALID_FILL = 10030;
  TRADE_RETCODE_CONNECTION = 10031;
  TRADE_RETCODE_ONLY_REAL = 10032;
  TRADE_RETCODE_LIMIT_ORDERS = 10033;
  TRADE_RETCODE_LIMIT_VOLUME = 10034;
  TRADE_RETCODE_INVALID_ORDER = 10035;
  TRADE_RETCODE_POSITION_CLOSED = 10036;
  TRADE_RETCODE_INVALID_CLOSE_VOLUME = 10038;
  TRADE_RETCODE_CLOSE_ORDER_EXIST = 10039;
  TRADE_RETCODE_LIMIT_POSITIONS = 10040;
  TRADE_RETCODE_REJECT_CANCEL = 10041;
  TRADE_RETCODE_LONG_ONLY = 10042;
  TRADE_RETCODE_SHORT_ONLY = 10043;
  TRADE_RETCODE_CLOSE_ONLY = 10044;
  TRADE_RETCODE_FIFO_CLOSE = 10045;
}

// Position Type
enum PositionType {
  POSITION_TYPE_BUY = 0;  // Buy
  POSITION_TYPE_SELL = 1; // Sell
}

// Tick Flags (bitmask)
enum TickFlag {
  TICK_FLAG_UNSPECIFIED = 0;
  TICK_FLAG_BID = 2;      // 0x02
  TICK_FLAG_ASK = 4;      // 0x04
  TICK_FLAG_LAST = 8;     // 0x08
  TICK_FLAG_VOLUME = 16;  // 0x10
  TICK_FLAG_BUY = 32;     // 0x20
  TICK_FLAG_SELL = 64;    // 0x40
}

// Position Reason
enum PositionReason {
  POSITION_REASON_CLIENT = 0;  // From desktop terminal
  POSITION_REASON_MOBILE = 1;  // From mobile app
  POSITION_REASON_WEB = 2;     // From web platform
  POSITION_REASON_EXPERT = 3;  // From MQL5 (Expert Advisor/script)
}

// Order State
enum OrderState {
  ORDER_STATE_STARTED = 0;         // Checked, not accepted
  ORDER_STATE_PLACED = 1;          // Accepted
  ORDER_STATE_CANCELED = 2;        // Canceled by client
  ORDER_STATE_PARTIAL = 3;         // Partially executed
  ORDER_STATE_FILLED = 4;          // Fully executed
  ORDER_STATE_REJECTED = 5;        // Rejected
  ORDER_STATE_EXPIRED = 6;         // Expired
  ORDER_STATE_REQUEST_ADD = 7;     // Being registered
  ORDER_STATE_REQUEST_MODIFY = 8;  // Being modified
  ORDER_STATE_REQUEST_CANCEL = 9;  // Being canceled
}

// Order Reason
enum OrderReason {
  ORDER_REASON_CLIENT = 0;  // From desktop
  ORDER_REASON_MOBILE = 1;  // From mobile
  ORDER_REASON_WEB = 2;     // From web
  ORDER_REASON_EXPERT = 3;  // From EA/script
  ORDER_REASON_SL = 4;      // Stop Loss
  ORDER_REASON_TP = 5;      // Take Profit
  ORDER_REASON_SO = 6;      // Stop Out
}



// ENUM_DEAL_TYPE
enum DealType {
  DEAL_TYPE_BUY = 0;
  DEAL_TYPE_SELL = 1;
  DEAL_TYPE_BALANCE = 2;
  DEAL_TYPE_CREDIT = 3;
  DEAL_TYPE_CHARGE = 4;
  DEAL_TYPE_CORRECTION = 5;
  DEAL_TYPE_BONUS = 6;
  DEAL_TYPE_COMMISSION = 7;
  DEAL_TYPE_COMMISSION_DAILY = 8;
  DEAL_TYPE_COMMISSION_MONTHLY = 9;
  DEAL_TYPE_COMMISSION_AGENT_DAILY = 10;
  DEAL_TYPE_COMMISSION_AGENT_MONTHLY = 11;
  DEAL_TYPE_INTEREST = 12;
  DEAL_TYPE_BUY_CANCELED = 13;
  DEAL_TYPE_SELL_CANCELED = 14;
  DEAL_DIVIDEND = 15;
  DEAL_DIVIDEND_FRANKED = 16;
  DEAL_TAX = 17;
}

// ENUM_DEAL_ENTRY
enum DealEntry {
  DEAL_ENTRY_IN = 0;
  DEAL_ENTRY_OUT = 1;
  DEAL_ENTRY_INOUT = 2;
  DEAL_ENTRY_OUT_BY = 3;
}

// ENUM_DEAL_REASON
enum DealReason {
  DEAL_REASON_CLIENT = 0;
  DEAL_REASON_MOBILE = 1;
  DEAL_REASON_WEB = 2;
  DEAL_REASON_EXPERT = 3;
  DEAL_REASON_SL = 4;
  DEAL_REASON_TP = 5;
  DEAL_REASON_SO = 6;
  DEAL_REASON_ROLLOVER = 7;
  DEAL_REASON_VMARGIN = 8;
  DEAL_REASON_SPLIT = 9;
}


// ENUM_ACCOUNT_TRADE_MODE
enum AccountTradeMode {
  ACCOUNT_TRADE_MODE_DEMO = 0;
  ACCOUNT_TRADE_MODE_CONTEST = 1;
  ACCOUNT_TRADE_MODE_REAL = 2;
}

// ENUM_ACCOUNT_STOPOUT_MODE
enum AccountStopoutMode {
  ACCOUNT_STOPOUT_MODE_PERCENT = 0;
  ACCOUNT_STOPOUT_MODE_MONEY = 1;
}

// ENUM_ACCOUNT_MARGIN_MODE
enum AccountMarginMode {
  ACCOUNT_MARGIN_MODE_RETAIL_NETTING = 0;
  ACCOUNT_MARGIN_MODE_EXCHANGE = 1;
  ACCOUNT_MARGIN_MODE_RETAIL_HEDGING = 2;
}

// ENUM_SYMBOL_CHART_MODE
enum SymbolChartMode {
  SYMBOL_CHART_MODE_BID = 0;
  SYMBOL_CHART_MODE_LAST = 1;
}

// ENUM_SYMBOL_CALC_MODE
enum SymbolCalcMode {
  SYMBOL_CALC_MODE_FOREX = 0;
  SYMBOL_CALC_MODE_FUTURES = 1;
  SYMBOL_CALC_MODE_CFD = 2;
  SYMBOL_CALC_MODE_CFDINDEX = 3;
  SYMBOL_CALC_MODE_CFDLEVERAGE = 4;
  SYMBOL_CALC_MODE_FOREX_NO_LEVERAGE = 5;
  SYMBOL_CALC_MODE_EXCH_STOCKS = 32;
  SYMBOL_CALC_MODE_EXCH_FUTURES = 33;
  SYMBOL_CALC_MODE_EXCH_OPTIONS = 34;
  SYMBOL_CALC_MODE_EXCH_OPTIONS_MARGIN = 36;
  SYMBOL_CALC_MODE_EXCH_BONDS = 37;
  SYMBOL_CALC_MODE_EXCH_STOCKS_MOEX = 38;
  SYMBOL_CALC_MODE_EXCH_BONDS_MOEX = 39;
  SYMBOL_CALC_MODE_SERV_COLLATERAL = 64;
}

// ENUM_SYMBOL_TRADE_MODE
enum SymbolTradeMode {
  SYMBOL_TRADE_MODE_DISABLED = 0;
  SYMBOL_TRADE_MODE_LONGONLY = 1;
  SYMBOL_TRADE_MODE_SHORTONLY = 2;
  SYMBOL_TRADE_MODE_CLOSEONLY = 3;
  SYMBOL_TRADE_MODE_FULL = 4;
}

// ENUM_SYMBOL_TRADE_EXECUTION
enum SymbolTradeExecution {
  SYMBOL_TRADE_EXECUTION_REQUEST = 0;
  SYMBOL_TRADE_EXECUTION_INSTANT = 1;
  SYMBOL_TRADE_EXECUTION_MARKET = 2;
  SYMBOL_TRADE_EXECUTION_EXCHANGE = 3;
}

// ENUM_SYMBOL_SWAP_MODE
enum SymbolSwapMode {
  SYMBOL_SWAP_MODE_DISABLED = 0;
  SYMBOL_SWAP_MODE_POINTS = 1;
  SYMBOL_SWAP_MODE_CURRENCY_SYMBOL = 2;
  SYMBOL_SWAP_MODE_CURRENCY_MARGIN = 3;
  SYMBOL_SWAP_MODE_CURRENCY_DEPOSIT = 4;
  SYMBOL_SWAP_MODE_INTEREST_CURRENT = 5;
  SYMBOL_SWAP_MODE_INTEREST_OPEN = 6;
  SYMBOL_SWAP_MODE_REOPEN_CURRENT = 7;
  SYMBOL_SWAP_MODE_REOPEN_BID = 8;
}

// ENUM_DAY_OF_WEEK
enum DayOfWeek {
  DAY_OF_WEEK_SUNDAY = 0;
  DAY_OF_WEEK_MONDAY = 1;
  DAY_OF_WEEK_TUESDAY = 2;
  DAY_OF_WEEK_WEDNESDAY = 3;
  DAY_OF_WEEK_THURSDAY = 4;
  DAY_OF_WEEK_FRIDAY = 5;
  DAY_OF_WEEK_SATURDAY = 6;
}

// ENUM_SYMBOL_ORDER_GTC_MODE
enum SymbolOrderGTCMode {
  SYMBOL_ORDERS_GTC = 0;
  SYMBOL_ORDERS_DAILY = 1;
  SYMBOL_ORDERS_DAILY_NO_STOPS = 2;
}

// ENUM_SYMBOL_OPTION_RIGHT
enum SymbolOptionRight {
  SYMBOL_OPTION_RIGHT_CALL = 0;
  SYMBOL_OPTION_RIGHT_PUT = 1;
}

// ENUM_SYMBOL_OPTION_MODE
enum SymbolOptionMode {
  SYMBOL_OPTION_MODE_EUROPEAN = 0;
  SYMBOL_OPTION_MODE_AMERICAN = 1;
}
